изменяем последний комит или камит

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <h1>check git diff</h1>
   <p>add new text</p>
   <p>splash</p>
+  <p>забыл добавить</p>
+  <p>add script</p>
+  <script src="main.js"></script>
 </body>
 </html>
