add feature on new branch

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <p>splash</p>
   <p>забыл добавить</p>
   <p>add script</p>
+  <div class="block"> add new feature </div>
   <script src="main.js"></script>
 </body>
 </html>
