--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <p>забыл добавить</p>
   <p>add script</p>
   <div class="block"> add new feature </div>
+  <div class="test">создаем конфликт</div>
   <script src="main.js"></script>
 </body>
 </html>
